<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detailUserActivity.DetailUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

    <TextView
            android:id="@+id/detail_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@+id/detail_followers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/detail_followers"/>
    <TextView
            android:id="@+id/detail_number_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/detail_repo"
            app:layout_constraintStart_toStartOf="@id/detail_repo"
            tools:text="0" android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/detail_repo"/>

    <TextView
            android:id="@+id/detail_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/detail_username"
            app:layout_constraintStart_toStartOf="@+id/detail_username"
            app:layout_constraintTop_toBottomOf="@+id/detail_username"
            android:layout_marginTop="32dp"/>
    <TextView
            android:id="@+id/detail_number_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/detail_followers"
            app:layout_constraintStart_toStartOf="@id/detail_followers"
            tools:text="0"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/detail_followers"/>

    <TextView
            android:id="@+id/detail_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@+id/detail_followers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_followers"/>
    <TextView
            android:id="@+id/detail_number_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/detail_following"
            app:layout_constraintStart_toStartOf="@id/detail_following"
            tools:text="0" android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/detail_following"/>

    <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/detail_avatar"
            app:layout_constraintTop_toBottomOf="@id/detail_avatar"
            tools:text="@string/name"
            app:layout_constraintEnd_toEndOf="@+id/detail_avatar"/>

    <TextView
            android:id="@+id/detail_username"
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/detail_name"
            app:layout_constraintStart_toStartOf="@+id/detail_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_name"/>

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tabSelectedTextColor="?android:textColorPrimary"
            app:tabTextColor="@android:color/darker_gray"
            tools:ignore="SpeakableTextPresentCheck"
            app:layout_constraintTop_toBottomOf="@+id/detail_followers"
            android:layout_marginTop="8dp"/>

    <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs" />

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/detail_followers"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border"
            app:tint="@color/black"
            app:backgroundTint="@color/gray"
            app:rippleColor="@color/darkGray"
            app:pressedTranslationZ="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/favorite"/>
</androidx.constraintlayout.widget.ConstraintLayout>